--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
   "dependencies": {
     "@biomejs/biome": "^1.9.0",
     "@nextui-org/react": "^2.4.7",
+    "@tanstack/react-query": "^5.56.2",
+    "@tanstack/react-router": "^1.57.15",
     "framer-motion": "^11.5.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "vite-plugin-biome": "^1.0.12"
   },
   "devDependencies": {
+    "@tanstack/router-devtools": "^1.57.15",
+    "@tanstack/router-plugin": "^1.57.15",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
